fix: Make text alignment correct in aboutme

--- a/about-me/about-me.css
+++ b/about-me/about-me.css
@@ -13,12 +13,12 @@
 .about-content {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 48.75%;
     transform: translate(-50%, -50%);
     text-align: center;
     width: 90%;
     max-width: 800px;
-    padding: 12.5rem 2rem 2rem;
+    padding: 23rem 2rem 2rem;
 }
 
 .alignment-center {
